Add Views to Storyboard

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rPe-eS-Vag">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Table View Controller-->
+        <scene sceneID="Xb8-3L-uc3">
+            <objects>
+                <tableViewController id="d61-Hc-oRZ" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="K9A-bS-dET">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="120" id="dfX-8j-7Gw">
+                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dfX-8j-7Gw" id="Qye-Do-0Aa">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="APW-X9-l3l">
+                                            <rect key="frame" x="8" y="35" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="APW-X9-l3l" secondAttribute="height" multiplier="1:1" id="0TB-9p-bUn"/>
+                                                <constraint firstAttribute="height" constant="50" id="0um-qG-xbG"/>
+                                                <constraint firstAttribute="height" constant="50" id="hmd-7B-G95"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="APW-X9-l3l" firstAttribute="leading" secondItem="Qye-Do-0Aa" secondAttribute="leading" constant="8" id="dov-0n-zwV"/>
+                                        <constraint firstItem="APW-X9-l3l" firstAttribute="centerY" secondItem="Qye-Do-0Aa" secondAttribute="centerY" id="mbW-gk-eea"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="93p-7q-XL9" kind="show" identifier="ShowDetailSegue" id="fB8-CI-isk"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="d61-Hc-oRZ" id="QYO-nj-QMl"/>
+                            <outlet property="delegate" destination="d61-Hc-oRZ" id="Pvg-QO-vY7"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Gjb-Pi-bbf">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="dcl-6d-qqV">
+                            <connections>
+                                <segue destination="93p-7q-XL9" kind="show" identifier="AddUserSegue" id="0Hg-em-7ci"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vkZ-0J-tUt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1007.2463768115942" y="-65.625"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="y2Z-en-gRr">
+            <objects>
+                <viewController id="93p-7q-XL9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8UC-NP-WoR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kUl-B9-Yru">
+                                <rect key="frame" x="32" y="138" width="350" height="350"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="kUl-B9-Yru" secondAttribute="height" multiplier="1:1" id="uTX-wc-HPf"/>
+                                    <constraint firstAttribute="width" constant="350" id="yTZ-SQ-uP0"/>
+                                    <constraint firstAttribute="height" constant="350" id="zOu-lV-l89"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="GSu-A1-p7T">
+                                <rect key="frame" x="40" y="508" width="334" height="104"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SHO-Mm-5ws">
+                                        <rect key="frame" x="0.0" y="0.0" width="334" height="23.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i0Y-x9-Slv">
+                                        <rect key="frame" x="0.0" y="40.5" width="334" height="23"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T6J-Y6-Dam">
+                                        <rect key="frame" x="0.0" y="80.5" width="334" height="23.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="kUl-B9-Yru" firstAttribute="top" secondItem="6wy-51-h5X" secondAttribute="top" constant="50" id="2od-5n-Ubs"/>
+                            <constraint firstItem="6wy-51-h5X" firstAttribute="trailing" secondItem="GSu-A1-p7T" secondAttribute="trailing" constant="40" id="6u3-KY-VHK"/>
+                            <constraint firstItem="kUl-B9-Yru" firstAttribute="centerX" secondItem="6wy-51-h5X" secondAttribute="centerX" id="9nR-nC-0EE"/>
+                            <constraint firstItem="6wy-51-h5X" firstAttribute="bottom" secondItem="GSu-A1-p7T" secondAttribute="bottom" constant="250" id="VvT-A8-3fn"/>
+                            <constraint firstItem="i0Y-x9-Slv" firstAttribute="top" secondItem="kUl-B9-Yru" secondAttribute="bottom" constant="20" id="hmv-JB-P99"/>
+                            <constraint firstItem="GSu-A1-p7T" firstAttribute="leading" secondItem="6wy-51-h5X" secondAttribute="leading" constant="40" id="jW6-AL-t8C"/>
+                            <constraint firstItem="GSu-A1-p7T" firstAttribute="top" secondItem="kUl-B9-Yru" secondAttribute="bottom" constant="20" id="uBi-Sg-zgh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6wy-51-h5X"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="1z0-X3-KZJ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Te2-mt-vpT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1794" y="-66"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Ntf-K9-mkZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rPe-eS-Vag" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="emV-pJ-it1">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="d61-Hc-oRZ" kind="relationship" relationship="rootViewController" id="GGn-tC-6ux"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hGf-Jd-FCf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="97.101449275362327" y="-65.625"/>
+        </scene>
+    </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="fB8-CI-isk"/>
+    </inferredMetricsTieBreakers>
 </document>
