--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
         <!--Title-->
         <scene sceneID="y2Z-en-gRr">
             <objects>
-                <viewController id="93p-7q-XL9" customClass="DetailTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="93p-7q-XL9" customClass="DetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8UC-NP-WoR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
